src/objects/Touchpoint_Type_Score__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>ACCOUNT_BLOCK_RELEASE_REQUEST__c</fullName>
        <label>ACCOUNT BLOCK RELEASE REQUEST</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AFT_INSTAL_Score__c</fullName>
        <label>AFT INSTAL Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BREAKDOWN__c</fullName>
        <label>BREAKDOWN</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BUDGETS_Score__c</fullName>
        <label>BUDGETS Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CALL_LIST_INGREDIENTS__c</fullName>
        <label>CALL LIST INGREDIENTS</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CAMPAIGN_Score__c</fullName>
        <label>CAMPAIGN Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CASE_FOLL_UP__c</fullName>
        <label>CASE FOLL UP</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMD_CHANGE_Score__c</fullName>
        <label>CMD CHANGE Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COLD_AQCUISITION_Score__c</fullName>
        <label>COLD AQCUISITION Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COMPANY_CHANGE_Score__c</fullName>
        <label>COMPANY CHANGE Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CONTACT_REQUEST_Score__c</fullName>
        <label>CONTACT REQUEST Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CONVERSION_MACHINE__c</fullName>
        <label>CONVERSION (MACHINE)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CONVERSION_SERVICE__c</fullName>
        <label>CONVERSION (SERVICE)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COUNTER_READINGS__c</fullName>
        <label>COUNTER READINGS</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CREDIT_CHECK__c</fullName>
        <label>CREDIT CHECK</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CREDIT_LIMIT_ALERT__c</fullName>
        <label>CREDIT LIMIT ALERT</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CROSS_UP_SELL_Score__c</fullName>
        <label>CROSS/UP SELL Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>END_WARR_Score__c</fullName>
        <label>END WARR Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXP_Score__c</fullName>
        <label>EXP Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>E_INVOICING_REQUEST__c</fullName>
        <label>E-INVOICING REQUEST</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FIRST_ORDER_SURVEY_Score__c</fullName>
        <label>FIRST ORDER SURVEY Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FIXED_PAYMENT_TERMS_Score__c</fullName>
        <label>FIXED PAYMENT TERMS Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FIXED_TERMS_SETTL__c</fullName>
        <label>FIXED TERMS SETTL</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FIXED_TERM_CHECK__c</fullName>
        <label>FIXED TERM CHECK</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FOLL_UP_Score__c</fullName>
        <label>FOLL UP Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GENERIC_REQUEST_Score__c</fullName>
        <label>GENERIC REQUEST Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INBOUND_CALL_Score__c</fullName>
        <label>INBOUND CALL Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INDEXATION_Score__c</fullName>
        <label>INDEXATION Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INSTALLATION_DE_INSTALLATION__c</fullName>
        <label>INSTALLATION / DE-INSTALLATION</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KPI_SLA_SETTL__c</fullName>
        <label>KPI-SLA SETTL</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KPI_SLA_Score__c</fullName>
        <label>KPI/SLA Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LEAD_NURTURING__c</fullName>
        <label>LEAD NURTURING</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MACHINE_CASE_WITH_NO_WARRANTY__c</fullName>
        <label>MACHINE CASE WITH NO WARRANTY</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MACHINE_SWAP__c</fullName>
        <label>MACHINE SWAP</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MANUAL__c</fullName>
        <label>MANUAL</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MOVEMNT_ADMIN__c</fullName>
        <label>MOVEMNT (ADMIN)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MOVEMNT_Score__c</fullName>
        <label>MOVEMNT Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPO_Score__c</fullName>
        <label>MPO Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPV_Score__c</fullName>
        <label>MPV Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEW_PRODUCT_INTRO_Score__c</fullName>
        <label>NEW PRODUCT INTRO Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEW_STARTED_COMPANY_Score__c</fullName>
        <label>NEW STARTED COMPANY Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPS_Score__c</fullName>
        <label>NPS Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ONE_TIME_BONUS_Score__c</fullName>
        <label>ONE-TIME BONUS Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ONLINE_CAMPAIGN__c</fullName>
        <label>ONLINE CAMPAIGN</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ONLINE_GENERAL_REQUEST_MC__c</fullName>
        <label>ONLINE GENERAL REQUEST MC</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ONLINE_INFORMATION_REQUEST_MC_Score__c</fullName>
        <label>ONLINE INFORMATION REQUEST MC Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ONLINE_INFORMATION_REQUEST_Score__c</fullName>
        <label>ONLINE INFORMATION REQUEST Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ONLINE_MASTER_DATA_CHANGE_REQ__c</fullName>
        <label>ONLINE MASTER DATA CHANGE REQ</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ONLINE_QUOTE_REQUEST_MC_Score__c</fullName>
        <label>ONLINE QUOTE REQUEST MC Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ONLINE_QUOTE_REQUEST_Score__c</fullName>
        <label>ONLINE QUOTE REQUEST Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OTHER_REQUEST_Score__c</fullName>
        <label>OTHER REQUEST Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OUTBOUND_CALL__c</fullName>
        <label>OUTBOUND CALL</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRODUCT_CHANGE_Score__c</fullName>
        <label>PRODUCT CHANGE Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PROMOTION_Score__c</fullName>
        <label>PROMOTION Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PROSPECT_LIST_Score__c</fullName>
        <label>PROSPECT LIST Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P_O_NUMBER_Score__c</fullName>
        <label>P.O. NUMBER Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REFERRAL_BUYING_GROUP_Score__c</fullName>
        <label>REFERRAL BUYING GROUP Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REFERRAL_CUSTOMER_Score__c</fullName>
        <label>REFERRAL CUSTOMER Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REFERRAL_EMPLOYEE_Score__c</fullName>
        <label>REFERRAL EMPLOYEE Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REFERRAL_PARTNER_Score__c</fullName>
        <label>REFERRAL PARTNER Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REFERRAL_ROUTESALES_Score__c</fullName>
        <label>REFERRAL ROUTESALES Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REFERRAL_TECHNICIAN_Score__c</fullName>
        <label>REFERRAL TECHNICIAN Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REMINDER__c</fullName>
        <label>REMINDER</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RENEWED_ASSET_TERMINATION_CMR__c</fullName>
        <label>RENEWED ASSET TERMINATION CMR</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RENT_BUY_Score__c</fullName>
        <label>RENT-BUY Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REPORT_REQUEST_Score__c</fullName>
        <label>REPORT REQUEST Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RM_MPO_Score__c</fullName>
        <label>RM + MPO Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RM_Score__c</fullName>
        <label>RM Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ROUTE_SALES_RESCHEDULING__c</fullName>
        <label>ROUTE SALES RESCHEDULING</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SELL_OUT_DATA_Score__c</fullName>
        <label>SELL-OUT DATA Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SIGNED_CONTRACT_Score__c</fullName>
        <label>SIGNED CONTRACT Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STAND_AGREEMENT_Score__c</fullName>
        <label>STAND AGREEMENT Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SUBSCR_ORDER_ALERT__c</fullName>
        <label>SUBSCR ORDER ALERT</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TAILOR_MADE_AGREEMENT_Score__c</fullName>
        <label>TAILOR-MADE AGREEMENT Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TERMINATED_ASSETS_CHECK_AGREEMENT__c</fullName>
        <label>TERMINATED ASSETS - CHECK AGREEMENT</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRADE_SHOW_EVENT_Score__c</fullName>
        <label>TRADE SHOW/EVENT Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VOLUME_OBLIGATION_Score__c</fullName>
        <label>VOLUME OBLIGATION Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VOLUME_OBLIG_SETTL__c</fullName>
        <label>VOLUME OBLIG SETTL</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WARM_WELCOME_FOLL_UP_Score__c</fullName>
        <label>WARM WELCOME FOLL UP Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3_1_1_AGREEMENT_RENEWAL__c</fullName>
        <label>3+1+1 AGREEMENT RENEWAL</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3_1_1_ASSET_RENEWAL__c</fullName>
        <label>3+1+1 ASSET RENEWAL</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Touchpoint Type Score</label>
</CustomObject>